--- a/src/components/canvas/EarthCanvas.css
+++ b/src/components/canvas/EarthCanvas.css
@@ -3,6 +3,8 @@
   height: 100%;
   position: relative;
   min-height: 400px;
+  contain: layout style paint;
+  will-change: transform;
 }
 
 .earth-placeholder,
