--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@ code {
     monospace;
 }
 
-html,
+html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   scroll-behavior: smooth;
   overflow-x: hidden;
